package Presentation;

public class Controller {

    public static void main(String args[]) {

        View view = new View();
    }

}
